--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+    //qr_code
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
 }
