--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/BaseApp">
-
+        <activity android:name=".MapActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/BaseApp.NoActionBar" />
         <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +41,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <service
             android:name=".TotalMusic.AudioService"
@@ -51,7 +54,6 @@
             </intent-filter>
         </service>
 
-
         <activity android:name=".TotalHome.HomeActivity" />
         <activity android:name=".TotalMusic.MusicPlayer" />
         <activity android:name=".TotalPhoto.DetailFile.PhotosActivity" />
@@ -62,8 +64,7 @@
         <activity android:name=".TotalBattery.BatteryActivity" />
         <activity android:name=".TotalMemory.MemoryActivity" />
         <activity android:name=".TotalPhoneInfo.PhoneInfoActivity" />
-        <activity android:name=".SearchActivity"></activity>
-
+        <activity android:name=".SearchActivity" />
     </application>
 
 </manifest>
