--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,12 +28,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/BaseApp">
-        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".Activity.SupportWebActivity"></activity>
+        <activity android:name=".Activity.MapActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/BaseApp.NoActionBar" />
-        <activity android:name=".IntroActivity">
+        <activity android:name=".Activity.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -65,7 +66,8 @@
         <activity android:name=".TotalMemory.MemoryActivity" />
         <activity android:name=".TotalPhoneInfo.PhoneInfoActivity" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".Activity.SearchActivity"
             android:parentActivityName=".TotalHome.HomeActivity" />
     </application>
+
 </manifest>
