--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".TotalMusic.AudioApplication"
+        android:name=".Activity.TotalMusic.AudioApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/BaseApp">
-        <activity android:name=".Activity.SupportWebActivity"></activity>
-        <activity android:name=".Activity.MapActivity" />
+
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
@@ -44,7 +44,7 @@
         </activity>
 
         <service
-            android:name=".TotalMusic.AudioService"
+            android:name=".Activity.TotalMusic.AudioService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -56,17 +56,23 @@
         </service>
 
         <activity android:name=".TotalHome.HomeActivity" />
-        <activity android:name=".TotalMusic.MusicPlayer" />
+        <activity android:name=".Activity.TotalMusic.MusicPlayer" />
         <activity android:name=".TotalPhoto.DetailFile.PhotosActivity" />
         <activity android:name=".TotalMessage.Sms.SmsActivity" />
         <activity android:name=".TotalMessage.Chat.ChatActivity" />
-        <activity android:name=".TotalMusic.TotalMusicActivity" />
-        <activity android:name=".TotalApp.UserAppsActivity" />
-        <activity android:name=".TotalBattery.BatteryActivity" />
-        <activity android:name=".TotalMemory.MemoryActivity" />
-        <activity android:name=".TotalPhoneInfo.PhoneInfoActivity" />
+        <activity android:name=".Activity.TotalMusic.TotalMusicActivity" />
+        <activity android:name=".Activity.TotalApp.UserAppsActivity" />
+        <activity android:name=".Activity.BatteryActivity" />
+        <activity android:name=".Activity.MemoryActivity" />
+        <activity android:name=".Activity.TotalPhoneInfo.PhoneInfoActivity" />
         <activity
             android:name=".Activity.SearchActivity"
+            android:parentActivityName=".TotalHome.HomeActivity" />
+        <activity
+            android:name=".Activity.SupportWebActivity"
+            android:parentActivityName=".TotalHome.HomeActivity" />
+        <activity
+            android:name=".Activity.MapActivity"
             android:parentActivityName=".TotalHome.HomeActivity" />
     </application>
 
