--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,13 @@ dependencies {
     })
 
     //androidX
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-    implementation 'androidx.media:media:1.1.0-alpha04'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+    implementation 'androidx.media:media:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     //junit
     testImplementation 'junit:junit:4.12'
@@ -68,13 +68,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     //Play Services
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 //    jsoup
     implementation 'org.jsoup:jsoup:1.11.3'
 
     //Speechrecognition
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'com.google.code.gson:gson:2.8.2'
 
     //circlrView
@@ -86,7 +86,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     //rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
@@ -102,6 +102,8 @@ dependencies {
 
     //qr_code
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
+    implementation 'com.github.rubensousa:gravitysnaphelper:2.1.0'
 
     //fab
     implementation 'com.github.clans:fab:1.6.2'
